# Learning-ROS2

./: README.md
ROS2/C2_1/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  ros2_cpp_node  ros2_python_node.py
ROS2/C2_1/ament_cmake_core/: ros2_cppConfig.cmake
ROS2/C2_1/ament_cmake_environment_hooks/: local_setup.dsv  local_setup.sh  package.dsv
ROS2/C2_1/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
ROS2/C2_2/demo_cpp/: CMakeLists.txt  package.xml
ROS2/C2_2/demo_cpp/src/: cpp_node.cpp
ROS2/C2_2/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
ROS2/C2_2/log/: latest_build
ROS2/C2_2/python_src/demo_python_pkg/: setup.py
ROS2/C2_2/python_src/install/: setup.sh
ROS2/C2_3/: novel1.txt
ROS2/C2_3/install/: local_setup.sh  setup.sh
ROS2/C2_3/log/: latest_build
ROS2/C2_3/src/demo_cpp/: CMakeLists.txt
ROS2/C2_3/src/demo_cpp/src/: learn_auto.cpp  learn_function.cpp  learn_lamda.cpp  learn_shared_ptr.cpp  learn_thread.cpp  person_node.cpp
ROS2/C2_3/src/python_src/demo_python_pkg/: setup.py
ROS2/C2_3/src/python_src/log/: latest_build
ROS2/C3_1/: novel1.txt  novel2.txt  novel3.txt
ROS2/C3_1/install/: local_setup.sh  setup.sh
ROS2/C3_1/learn_top/install/: local_setup.sh  setup.sh
ROS2/C3_1/learn_top/log/: latest_build
ROS2/C3_1/learn_top/src/demo_cpp_topic/: CMakeLists.txt  package.xml
ROS2/C3_1/learn_top/src/demo_python_topic/: setup.py
ROS2/C3_1/log/: latest_build
ROS2/C3_4/install/: local_setup.sh  setup.sh
ROS2/C3_4/install/status_interfaces/share/status_interfaces/: package.sh  package.xml
ROS2/C3_4/log/: latest_build
ROS2/C3_4/src/status_display/: CMakeLists.txt
ROS2/C3_4/src/status_display/src/: hello_qt.cpp  sys_status_display.cpp
ROS2/C3_4/src/status_interfaces/: CMakeLists.txt
ROS2/C3_4/src/status_interfaces/msg/: SystemStatus.msg
ROS2/C3_4/src/status_publisher/: setup.py
ROS2/C3_4/src/status_publisher/status_publisher/: sys_status_pub.py
ROS2/C4.1/install/: local_setup.sh  setup.sh
ROS2/C4.1/log/: latest_build
ROS2/C4.1/src/chapt4_interfaces/: CMakeLists.txt
ROS2/C4.1/src/demo_cpp_service/: CMakeLists.txt  package.xml
ROS2/C4.1/src/demo_cpp_service/launch/: demo.launch.py
ROS2/C4.1/src/demo_cpp_service/src/: turtle_control.cpp
ROS2/C4.1/src/demo_python_service/: setup.py
ROS2/C5_1/install/: local_setup.sh  setup.sh
ROS2/C5_1/log/: latest_build
ROS2/C5_1/src/demo_cpp_tf/: CMakeLists.txt  package.xml
ROS2/C5_1/src/demo_python_tf/: package.xml  setup.py
ROS2/install/: setup.ps1
ROS2/log/: latest_build
(+50 files in other folders)
